--- a/Ejercicios UX_UI/ejrcicioux.html
+++ b/Ejercicios UX_UI/ejrcicioux.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="Es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sitio NotCo</title>
 </head>
 <body>
-
     <div class="head">
-
         <div class="logo">
         <a href="#">Logo</a>
         </div>
-
         <nav class="navbar">
             <a href="#">Home</a>
             <a href="/productos.html">Nuestros productos</a>
@@ -22,7 +19,6 @@
             <a href="#">Dónde comprar</a>
             <a href="#">Contacto</a>
             <a href="#">Perfil de Usuario</a>
-
             <form action="../../form-result.php" method="post" target="_blank">
                 <p>
                   <input type="search" name="busquedaproducto" placeholder="Notproduct">
@@ -30,26 +26,19 @@
                 </p>
               </form>
             
-            <p> </p>
-
         </nav>
-
     </div>
-
     <main>
-
     <header class="content header">
         <h1 class="title">La Not Burger que va  bien con todo</h1>
         <p>
             ¡Extremadamente <b>jugosa</b>, extremadamente deliciosa!
             Es como una hamburguesa pero hecha a base de plantas.
         </p>
-
         <div class="btn-home">
             <a href="#" class="btn">Saber más</a>
         </div>
     </header>
-
 <div class="carousel">
     <div class="card">
         <img scr="#" alt="Imágen Not Milk Original 1lt">
@@ -82,11 +71,8 @@
         <button>Agregar al carrito</button>
     </div>
 </div>
-
     
-
     <section class="content sau">
-
         <h2 class="title">Nuestras categorías</h2>
         <a href="#">Not Cheese</a>
         <a href="#">Not Milk</a>
@@ -95,9 +81,7 @@
         <a href="#">Not Meat</a>
         <a href="#">Not Mayo</a>
         <a href="#">Not Ice Cream</a>
-
     </section>
-
     <section class="content banner">
         <h2 class="title">Plant - Based</h2>
         <p>Cuando descubrimos que al sacar a los animales de la producción de alimentos
@@ -106,10 +90,8 @@
             crear un algoritmo que pueda aprender combinaciones infinitas de plantas para
             replicar los productos animales y que su sabor sea mucho mejor.
         </p>
-
         <a href="#" class="btn">Saber más</a>
     </section>
-
     </main>
 </body>
 </html>
