--- a/Ejercicios UX_UI/ejrcicioux.html
+++ b/Ejercicios UX_UI/ejrcicioux.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="Es">
 <head>
+    <link href="CSS/estiloscss.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sitio NotCo</title>
 </head>
 <body>
     <div class="head">
+        <nav class="navbar">
+            <a href="#"> <img src="imagenes/NotCo_logo.jpg" width="10%" height= "auto" align="left" alt="logo" href="#" href="#"></a>
+            <div class="dropdown">
+              <button>Nuestros productos</button>
+                <div class="dropdown-content">
+                <a href="NotCheese">Not Cheese</a>
+                <a href="NotMilk">NotMilk</a>
+                <a href="NotChicken">Not Chicken</a>
+                <a href="NotBurguer">Not Burger</a>
+                <a href="NotBurguer">Not Meat</a>
+                <a href="NotMayo">Not Mayo</a>
+                <a href="NotIceCream">Not Ice Cream</a>
+                </div>
+              </div>
         <div class="logo">
         <a href="#">Logo</a>
         </div>
