--- a/Ejercicios UX_UI/ejrcicioux.html
+++ b/Ejercicios UX_UI/ejrcicioux.html
@@ -2,7 +2,7 @@
 <html lang="Es">
 <head>
     <head>
-        /*Cami*/
+        >!--Cami>
         <link href="CSS/estiloscss.cs" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
