--- a/Ejercicios UX_UI/ejrcicioux.html
+++ b/Ejercicios UX_UI/ejrcicioux.html
@@ -2,7 +2,7 @@
 <html lang="Es">
 <head>
     <head>
-        >!--Cami>
+        <!--Cami-->
         <link href="CSS/estiloscss.cs" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
@@ -39,15 +39,15 @@
                 <a href="#">Dónde comprar</a>
                 <a href="#">Contacto</a>
                 <a href="#">Perfil de Usuario</a>
-                //Cami
-                //Cata
+                <!--Cami-->
+                <!--Cata-->
             <form action="../../form-result.php" method="post" target="_blank">
                 <p>
                   <input type="search" name="busquedaproducto" placeholder="Notproduct">
                   <input type="submit" value="Buscar">
                 </p>
               </form>
-              //Cata
+              <!--Cata-->
         </nav>
     </div>
     <main>
@@ -61,7 +61,7 @@
             <a href="#" class="btn">Saber más</a>
         </div>
     </header>
-    //Cata
+    <!--Cata-->
 <div class="carousel">
     <div class="card">
         <img scr="#" alt="Imágen Not Milk Original 1lt">
@@ -93,7 +93,7 @@
         <button>Comprar</button>
         <button>Agregar al carrito</button>
     </div>
-    //Cata
+    <!--Cata-->
 </div>
     
     <section class="content sau">
