vincular carpeta imágenes

--- a/Ejercicios UX_UI/ejrcicioux.html
+++ b/Ejercicios UX_UI/ejrcicioux.html
@@ -129,9 +129,9 @@ table, th, td {
 
 <table style="width:100%">
   <tr>
-    <th><img src="recetas1.jpg" alt="Papas a la huaicaina" width="470" height="288"></th>
-    <th><img src="recetas2.jpg" alt="Arepas con NotBurger" width="470" height="288"></th>
-    <th><img src="recetas3.jpg" alt="Brownies con NotMilk" width="470" height="288"></th>
+    <th><img src="imagenes/recetas1.jpg" alt="Papas a la huaicaina" width="470" height="288"></th>
+    <th><img src="imagenes/recetas2.jpg" alt="Arepas con NotBurger" width="470" height="288"></th>
+    <th><img src="imagenes/recetas3.jpg" alt="Brownies con NotMilk" width="470" height="288"></th>
   </tr>
   <tr>
     <td>Papas a la huaicaina con NotMilk</td>
