nueva estructura carrusel

--- a/Ejercicios UX_UI/ejrcicioux.html
+++ b/Ejercicios UX_UI/ejrcicioux.html
@@ -57,36 +57,85 @@
         </div>
     </header>
     <!--Cata-->
-<div class="carousel">
-    <div class="card">
-        <img scr="#" alt="Imágen Not Milk Original 1lt">
-        <h4>Not Milk</h4>
-        <h3>Not Milk Original 1lt</h3>
-        <p>Precio: $2.290</p>
-        <button>Comprar</button>
-        <button>Agregar al carrito</button>
+    <div class="container">
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="imagenes/Original_1L.png" alt="Imágen Not Milk Original 1lt"
+                    <div class="card-description">
+                        <div class="card-title"></div>
+                        <h4>Not Milk</h4>
+                        <div class="card-text">
+                            <p>Precio: $2.290</p>
+                            <div class="card-button">
+                                <button>Comprar</button>
+                                <button>Agregar al carrito</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="card">
-        <img scr="#" alt="Imágen Not Burguer 95g">
-        <h4>Not Burguer</h4>
-        <h3>Not Burguer 95g</h3>
-        <p>Precio: $1.490</p>
-        <button>Comprar</button>
-        <button>Agregar al carrito</button>
+    <div class="container">
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="imagenes/Burger_100g.png" alt="Imágen Not Burguer 100g"
+                    <div class="card-description">
+                        <div class="card-title"></div>
+                        <h4>Not Burguer</h4>
+                        <div class="card-text">
+                            <p>Precio: $1.490</p>
+                            <div class="card-button">
+                                <button>Comprar</button>
+                                <button>Agregar al carrito</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="card">
-        <img scr="#" alt="Imágen Not Ice Cream">
-        <h3>Nombre del Producto</h3>
-        <p>Precio: $2.290</p>
-        <button>Comprar</button>
-        <button>Agregar al carrito</button>
+    <div class="container">
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="imagenes/Cookies_328g.png" alt="Imágen Not Ice Cream"
+                    <div class="card-description">
+                        <div class="card-title"></div>
+                        <h4>Not Ice Cream 248g</h4>
+                        <div class="card-text">
+                            <p>Precio: $2.790</p>
+                            <div class="card-button">
+                                <button>Comprar</button>
+                                <button>Agregar al carrito</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="card">
-        <img scr="#" alt="Imágen Not Milk Original 1lt">
-        <h3>Nombre del Producto</h3>
-        <p>Precio: $2.290</p>
-        <button>Comprar</button>
-        <button>Agregar al carrito</button>
+    <div class="container">
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="imagenes/Mila_110g.png" alt="Imágen NotMila"
+                    <div class="card-description">
+                        <div class="card-title"></div>
+                        <h4>Not Mila 110g</h4>
+                        <div class="card-text">
+                            <p>Precio: $1.590</p>
+                            <div class="card-button">
+                                <button>Comprar</button>
+                                <button>Agregar al carrito</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <!--Cata-->
 </div>
