--- a/Ejercicios UX_UI/ejrcicioux.html
+++ b/Ejercicios UX_UI/ejrcicioux.html
@@ -63,15 +63,17 @@
                 <div class="swiper-slide">
                     <img src="imagenes/Original_1L.png" alt="Imágen Not Milk Original 1lt"
                     <div class="card-description">
-                        <div class="card-title"></div>
+                        <div class="card-title">
                         <h4>Not Milk</h4>
+                        </div>
                         <div class="card-text">
                             <p>Precio: $2.290</p>
+                        </div>
                             <div class="card-button">
                                 <button>Comprar</button>
                                 <button>Agregar al carrito</button>
                             </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -177,5 +179,31 @@
     <td>Algo dulce, rico y 100% plant based</td>
   </tr>
 </table>
+<div class="container"> 
+    <h2> Siguenos en Instagram </h2>
+    <section class="contenedor-ig">
+        <div class="imagen1">
+            <img src="img/not_co.jpg" alt="" width="200px" height="200px">
+            <h3><span class="icon icon-instagram"></span>    @Notcochile</h3>
+            <p>Publicación de nuestra seguidora @cami_123</p>
+        </div>
+        <div class="imagen1">
+            <img src="img/not_co.jpg" alt="" width="200px" height="200px">
+            <h3><span class="icon icon-instagram"></span>    @Notcochile</h3>
+            <p>Publicación de nuestra seguidora @cami_123</p>
+        </div>
+        <div class="imagen1">
+            <img src="img/not_co.jpg" alt="" width="200px" height="200px">
+            <h3><span class="icon icon-instagram"></span>    @Notcochile</h3>
+            <p>Publicación de nuestra seguidora @cami_123</p>
+        </div>
+        <div class="imagen1">
+            <img src="img/not_co.jpg" alt="" width="200px" height="200px">
+            <h3><span class="icon icon-instagram"></span>    @Notcochile</h3>
+            <p>Publicación de nuestra seguidora @cami_123</p>
+        </div>
+    </section>
+    </div>
 </body>
+<link rel="stylesheet" type="text/css" href="icon.css">
 </html>
