--- a/Ejercicios UX_UI/ejrcicioux.html
+++ b/Ejercicios UX_UI/ejrcicioux.html
@@ -27,7 +27,7 @@
               </div>
                 <a href="#">Nosotros</a>
                 <a href="#">Novedades</a>
-               
+                <!--hola equipo uno!!!!-->
              <div class="dropdown">
                <button>Recetas</button>
               </div>
