--- a/Ejercicios UX_UI/ejrcicioux.html
+++ b/Ejercicios UX_UI/ejrcicioux.html
@@ -140,6 +140,7 @@
         </div>
     </div>
     <!--Cata-->
+    <!--van-->
 </div>
     <section class="content sau">
         <h2 class="title">Nuestras categorías</h2>
@@ -172,6 +173,7 @@
     <td>Papas a la huaicaina con NotMilk</td>
     <td>Arepas con NotBurger</td>
     <td>Brownies con NotMilk</td>
+    <!--recetas-->
   </tr>
   <tr>
     <td>Un infaltable de la cocina peruana.</td>
