--- a/Ejercicios UX_UI/ejrcicioux.html
+++ b/Ejercicios UX_UI/ejrcicioux.html
@@ -161,26 +161,26 @@
             replicar los productos animales y que su sabor sea mucho mejor.
         </p>
         <a href="#" class="btn">Saber más</a>
+   <!--VICTOR-->
     </section>
-<h2>Recetas de la semana</h2>
-<table style="width:100%">
-  <tr>
-    <th><img src="imagenes/recetas1.jpg" alt="Papas a la huaicaina" width="470" height="288"></th>
-    <th><img src="imagenes/recetas2.jpg" alt="Arepas con NotBurger" width="470" height="288"></th>
-    <th><img src="imagenes/recetas3.jpg" alt="Brownies con NotMilk" width="470" height="288"></th>
-  </tr>
-  <tr>
-    <td>Papas a la huaicaina con NotMilk</td>
-    <td>Arepas con NotBurger</td>
-    <td>Brownies con NotMilk</td>
-    <!--recetas-->
-  </tr>
-  <tr>
-    <td>Un infaltable de la cocina peruana.</td>
-    <td>¡Alguien dijo arepitas con not burger!</td>
-    <td>Algo dulce, rico y 100% plant based</td>
-  </tr>
-</table>
+<div class="card">
+  <<img src="imagenes/recetas1.jpg" alt="Papas a la huaicaina" style="width:100%">
+  <div class="container">
+    <h4><b>Papas a la hauicaina</b></h4>
+    <p>Un infaltable de la cocina peruana.</p>
+   </div>
+       <div class="card">
+   <<img src="imagenes/recetas2.jpg" alt="Arepas con not burger" style="width:100%">
+   <div class="container">
+     <h4><b>Arepas con not burger</b></h4>
+     <p>¡Alguien dijo arepitas con not burger!</p>
+    </div>
+    <div class="card">
+     <<img src="imagenes/recetas3.jpg" alt="Brownies con NotMilk" style="width:100%">
+      <div class="container">
+       <h4><b>"Brownies con NotMilk"</b></h4>
+    <p>Algo dulce, rico y 100% plant based!</p>      
+</div>
 <div class="container"> 
     <h2> Siguenos en Instagram </h2>
     <section class="contenedor-ig">
